--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@splidejs/react-splide": "^0.7.12",
     "cra-template": "1.2.0",
+    "framer-motion": "^12.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-scripts": "5.0.1"
